[gd_scene load_steps=12 format=3 uid="uid://dmxwreqtr45cd"]

[ext_resource type="Script" path="res://game/actors/bullets/normal_bullet/bullet.gd" id="1_jhp0y"]
[ext_resource type="Texture2D" uid="uid://bsk6wghxielg8" path="res://game/actors/bullets/normal_bullet/bullet.png" id="2_tdbwo"]
[ext_resource type="AudioStream" uid="uid://75y3shgjm4gt" path="res://game/audio/sfx/bullet.ogg" id="3_etc4a"]
[ext_resource type="AudioStream" uid="uid://b65ywdjp8nos2" path="res://game/audio/sfx/explosion.ogg" id="4_kn0di"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7dknu"]
radius = 4.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r66pw"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("3_etc4a")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h76bl"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("4_kn0di")

[sub_resource type="Animation" id="Animation_1tl1o"]
resource_name = "DEAD"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_l5ag7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_68fom"]
resource_name = "SHOW"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_noicg"]
_data = {
"DEAD": SubResource("Animation_1tl1o"),
"RESET": SubResource("Animation_l5ag7"),
"SHOW": SubResource("Animation_68fom")
}

[node name="Bullet" type="RigidBody2D"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
script = ExtResource("1_jhp0y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7dknu")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_tdbwo")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_r66pw")
max_distance = 640.0
bus = &"sfx"

[node name="SoundExplosion" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_h76bl")
max_distance = 640.0
bus = &"sfx"

[node name="Anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_noicg")
}
autoplay = "SHOW"

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
